--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1142,9 +1142,9 @@ a {
   opacity: 0;
 }
 .cid-srryoN6sS6 {
-  padding-top: 7rem;
+  padding-top: 8rem;
   padding-bottom: 0rem;
-  background-color: #ffffff;
+  background-color: #fafafa;
 }
 .cid-srryoN6sS6 .card-wrapper {
   display: flex;
@@ -1185,8 +1185,8 @@ a {
 }
 .cid-srrynA1mpO {
   padding-top: 4rem;
-  padding-bottom: 5rem;
-  background-color: #ffffff;
+  padding-bottom: 7rem;
+  background-color: #fafafa;
 }
 .cid-srrynA1mpO .card-wrapper {
   display: flex;
@@ -1226,8 +1226,8 @@ a {
   }
 }
 .cid-s6S1tUtSWp {
-  padding-top: 3rem;
-  padding-bottom: 2rem;
+  padding-top: 7rem;
+  padding-bottom: 3rem;
   background-color: #ffffff;
 }
 .cid-s6S1tUtSWp img {
